--- a/client/package.json
+++ b/client/package.json
@@ -160,6 +160,7 @@
     ]
   },
   "devDependencies": {
+    "@arx-research/libhalo": "^1.2.17",
     "@babel/core": "7.12.3",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
@@ -177,7 +178,8 @@
     "nodemon": "^2.0.19",
     "puppeteer": "18.1",
     "selenium-webdriver": "^4.8.1",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "websocket": "^1.0.34"
   },
   "jest": {
     "roots": [
